objects/Km_Chatter_Log__c.object
<CustomObject>
    <fields>
        <fullName>ChatterText__c</fullName>
        <label>ChatterText</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Has_Feedback_Tag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has #Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Km_Team_Note__c</fullName>
        <label>Km Team Note</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Km_team_reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Km team reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_Article__c</fullName>
        <formula>if ( kavId__c == &quot;&quot;, &quot;&quot;, HYPERLINK(kavId__c, &quot;Knowledge Article &quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Knowledge Article</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>articleNumber__c</fullName>
        <label>Article Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>articleTitle__c</fullName>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>articleType__c</fullName>
        <label>Article Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kavId__c</fullName>
        <description>BL removed required attribute on Mar 9th - draft article does not have a kavid.</description>
        <label>kavId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>versionNumber__c</fullName>
        <label>Version Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Km Chatter Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>articleType__c</columns>
        <columns>articleNumber__c</columns>
        <columns>versionNumber__c</columns>
        <columns>articleTitle__c</columns>
        <columns>Has_Feedback_Tag__c</columns>
        <columns>Km_team_reviewed__c</columns>
        <columns>ChatterText__c</columns>
        <columns>Knowledge_Article__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>New_Feedback_Only</fullName>
        <columns>NAME</columns>
        <columns>articleTitle__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>articleType__c</columns>
        <columns>articleNumber__c</columns>
        <columns>versionNumber__c</columns>
        <columns>Has_Feedback_Tag__c</columns>
        <columns>Km_team_reviewed__c</columns>
        <columns>ChatterText__c</columns>
        <columns>Knowledge_Article__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Km_team_reviewed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>New Feedback Only</label>
        <sharedTo>
            <group>PG_KM</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>KCL-{00000000}</displayFormat>
        <label>Km Chatter Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Km Chatter Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>